[project]
name = "cumulus-library"
requires-python = ">= 3.10"
dependencies = [
    "ctakesclient >= 1.3",
    "cumulus-fhir-support >= 1",
    "duckdb >= 0.9",
    "fhirclient >= 4.1",
    "Jinja2 > 3",
    "pandas <3, >=2.1.3",
    "psmpy <1, >=0.3.13",
    "pyarrow >= 11.0",
    "pyathena >= 2.23",
    "requests >= 2.28",
    "rich >= 13.2",
    "sqlfluff >= 2.3.4",
    "sqlparse >0.4",
    "toml >= 0.10"
]
description = "Clinical study SQL generation for data derived from bulk FHIR"
readme = "README.md"
license = { text="Apache License 2.0" }
keywords = ["FHIR", "SQL", "Health Informatics"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic=["version"]
[project.optional-dependencies]
dev = [
    "black <25, >=24",
    "pre-commit",
    "pylint",
]
test = [
    "freezegun",
    "pytest",
    "requests-mock",
]

[project.urls]
Home = "https://smarthealthit.org/cumulus-a-universal-sidecar-for-a-smart-learning-healthcare-system/"
Documentation = "https://docs.smarthealthit.org/cumulus/"
Source = "https://github.com/smart-on-fhir/cumulus-library"


[project.scripts]
cumulus-library = "cumulus_library.cli:main_cli"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [".sqlfluff"]
