[project]
name = "cumulus-library"
requires-python = ">= 3.10"
dependencies = [
    "ctakesclient >= 1.3",
    "cumulus-fhir-support >= 1.1",
    "duckdb >= 0.9",
    "fhirclient >= 4.1",
    "Jinja2 > 3",
    "pandas <3, >=2.1.3",
    "psmpy <1, >=0.3.13",
    "pyarrow >= 11.0",
    "pyathena >= 2.23",
    "pytablewriter >= 1.2",
    "requests >= 2.28",
    "rich >= 13.2",
    "sqlfluff  >= 3",
    "sqlparse >0.4",
    "toml >= 0.10"
]
description = "Clinical study SQL generation for data derived from bulk FHIR"
readme = "README.md"
license = { text="Apache License 2.0" }
keywords = ["FHIR", "SQL", "Health Informatics"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic=["version"]
[project.optional-dependencies]
dev = [
    # if you update the ruff version, also update .pre-commit-config.yaml
    "ruff == 0.4.4",
    "pre-commit",
]
test = [
    "freezegun",
    "pytest",
    "pytest-cov",
    "responses"
]

[project.urls]
Home = "https://smarthealthit.org/cumulus/"
Documentation = "https://docs.smarthealthit.org/cumulus/library/"
Source = "https://github.com/smart-on-fhir/cumulus-library"


[project.scripts]
cumulus-library = "cumulus_library.cli:main_cli"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [".sqlfluff"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[tool.ruff.lint]
select = [
    "A",  # prevent using keywords that clobber python builtins
    "B",  # bugbear: security warnings
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "ISC",  # implicit string concatenation
    "PLE",  # pylint errors
    "RUF",  # the ruff developer's own rules
    "UP",  # alert you when better syntax is available in your python version
]
ignore = [
# Recommended ingore from `ruff format` due to in-project conflicts with check.
# It's expected that this will be fixed in the coming months.
    "ISC001"
]

[tool.ruff.lint.per-file-ignores]
# ./cumulus_library/schema needs general revisiting, deferring on style maintenance
# until that occurs
"cumulus_library/schema/valueset.py" = ["E501"]
